<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="account_type">com.salesforce.samples.nativesqlaggregator.login</string>
	<string name="app_name"><b>NativeSqlAggregator</b></string>
	<string name="app_package">com.salesforce.samples.nativesqlaggregator</string>
	<string name="logout_button">Logout</string>
	<string name="switch_user_button">Switch User</string>
	<string name="save_offline_button">Save Records Offline</string>
	<string name="clear_button">Clear Offline Store</string>
	<string name="join_button">Run Report</string>
	<string name="inspect_button">Inspect</string>
	<string name="switch_button">Switch</string>
	
	<!-- Query strings -->
    <string name="join_button_query">"SELECT {Account:Name}, COUNT({Opportunity:Name}), SUM({Opportunity:Amount}), AVG({Opportunity:Amount}), {Account:Id}, {Opportunity:AccountId} FROM {Account}, {Opportunity} WHERE {Account:Id} = {Opportunity:AccountId} GROUP BY {Account:Name}"</string>
</resources>
