<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#454545"
	android:id="@+id/root">

	<include layout="@layout/header" />

	<ScrollView android:layout_height="wrap_content"
	    android:layout_width="match_parent">

	   <LinearLayout android:orientation="vertical"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content">

            <Button android:id="@+id/save_offline"
                android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="120dp"
		        android:layout_marginBottom="50dp"
		        android:padding="10dp"
		        android:onClick="onSaveOfflineClick"
		        android:layout_gravity="center"
		        android:text="@string/save_offline_button"
		        android:textSize="20sp" />

		    <Button android:id="@+id/clear"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="50dp"
			    android:layout_marginBottom="50dp"
			    android:padding="10dp"
			    android:onClick="onClearClick"
			    android:layout_gravity="center"
			    android:text="@string/clear_button"
			    android:textSize="20sp" />

	        <Button android:id="@+id/join"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="50dp"
	            android:layout_marginBottom="120dp"
	            android:padding="10dp"
	            android:onClick="onJoinQueryClick"
	            android:layout_gravity="center"
	            android:text="@string/join_button"
	            android:textSize="20sp" />
	   </LinearLayout>
	</ScrollView>
</LinearLayout>
